# MyInterview

./: .gitignore  README.md  pyproject.toml
genetic-algorithms/: genetic_time.py
genetic-algorithms/algorithms/: genetic.py  mygenetic.py
hackerank/: test_Mark_and_Toys.py  test_permutations.py
job-interview/: test_find_anagrams_in_list.py  test_int_to_roman.py  test_is_prime_number.py  test_roman_to_int.py
job-interview/bluevine/: test_bluevine.py
job-interview/perimetr81/: main.py  pyproject.toml
job-interview/scylla_task/: pyproject.toml
job-interview/trees/: testBinaryTreeInorderTraversal.py  test_ConvertSortedArrayToBinarySearchTree.py  test_Sort_binary_tree_by_levels.py  test_binary_tree_mix.py
leetcode/: prime_numbers_mix.py  test_longest_prefix.py  test_minimum-depth-of-binary-tree.py  test_palindrome_number.py  test_path-sum.py  test_string_substrings_mix.py  test_two_sum.py
py/hackerank/: test_abbreviation.py  test_count_triplets_1.py  test_jim_and_the_orders.py  test_max_array_sum.py
py/leetcode/: test_longest_prefix.py  test_palindrome_number.py  test_two_sum.py
shared/: Node.py
todo/: mcls.py
