[tool.poetry]
name = "myinterviewpy"
version = "0.1.0"
description = ""
authors = ["Alex Granovsky <compfaculty@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"
django = "^4.2.3"
fastapi = "^0.99.1"
pandas = "^2.0.3"
numpy = "^1.25.0"
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
